@@ -4,6 +4,3 @@ washbox--pipe=Washbox pipe
 
 [entity-description]
 washbox=Pump fluids in to increase speed.\nNearby beacons cause interference.
-
-[recipe-name]
-washbox-washing=Washbox washing
